refactor: Actualizar dependencias de Mockito y agregar maven-surefire-plugin para mejorar las pruebas